pages/main/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --color-light-xl: #FFFFFF;
    --color-light-l: #F6F6F6;
    --color-light-s: #FAFAFA;
    --color-dark-s: #CDCDCD;
    --color-dark-m: #B2B2B2;
    --color-dark-l: #545454;
    --color-dark-xl: #4C4C4C;
    --color-dark-2xl: #444444;
    --color-dark-3xl: #292929;
    --color-primary: #F1CDB3;
    --color-primary-light: #FDDCC4;
}

/* ============ layout styles ============= */

header {
    z-index: 1;
    display: flex;
    justify-content: space-between;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    margin: 60px 0;
    width: 1200px;
    height: 60px;
}

nav ul {
    display: flex;
    justify-content: space-between;
    width: 443px;
    height: 27px;
    list-style: none;
}

#start {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background-image: url(../../assets/images/start-screen-gradient-background.png), url(../../assets/images/start-screen-background.jpg);
    background-repeat: repeat, no-repeat;
    background-size: auto, cover;
    height: 908px;
}

.start-content {
    display: flex;
    margin: 180px auto 0 auto;
    width: 1200px;
    height: 728px;
}

.start-text {
    width: 502px;
    height: 322px;
    margin: 163px 0 0 0;
}

.start-image {
    width: 698px;
    height: 728px;
}

.container {
    width: 1200px;
    margin: 0 auto;
    padding: 80px 0 100px 0;
}

#about {
    height: 588px;
    margin-top: 908px;
    background-color: var(--color-light-xl);
}

.about-content {
    display: flex;
}

.about-image {
    width: 300px;
    height: 408px;
    margin: 0 120px 0 175px;
}

.about-text {
    width: 605px;
    height: 380px;
    margin: 14px 0;
}

#pets {
    height: 877px;
    background-color: var(--color-light-l);
}

.pets-content {
    text-align: center;
}

.pets-content h2 {
    text-align: center;
}

.pets-slider {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.cards {
    display: flex;
    justify-content: space-between;
    width: 990px;
}

.card {
    width: 270px;
    height: 435px;
}

#help {
    height: 611px;
    background-color: var(--color-light-xl)
}

.help-content h2 {
    text-align: center;
}

.list {
    display: flex;
    flex-wrap: wrap;
    padding: 0 21px 0 14px;
    justify-content: space-evenly;
    align-content: space-between;
    height: 281px;
}

.list-item {
    flex-basis: 20%;
    text-align: center;
}

#donation {
    height: 462px;
    background-color: var(--color-light-l);
}

.donation-content {
    display: flex;
    width: 915px;
}

.donation-img {
    height: 261px;
    width: 505px;
    margin-right: 30px;
    margin-top: 12px;
}

.donation-text {
    width: 380px;
}

footer {
    height: 350px;
    background-image: url(../../assets/images/footer-background.png);
    background-repeat: no-repeat;
    background-size: cover;
}

.footer-content {
    display: flex;
    justify-content: space-between;
    padding: 40px 0 0 0;
}

.footer-content div {
    display: flex;
    flex-direction: column;
}

/* ============ other styles ============= */

/* h2 */
h2,
h3 {
    margin-bottom: 25px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 44px;
    line-height: 57px;
    color: #C4C4C4;
}

/* h3 */
h3 {
    font-size: 35px;
    line-height: 45px;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
}

h1 {
    margin: 0;
    font-family: 'Georgia';
    font-weight: 400;
    font-size: 32px;
    line-height: 35px;
    align-items: center;
    letter-spacing: 0.06em;
    color: var(--color-primary);
}

a {
    text-decoration: none;
}

.subtitle {
    font-family: 'Arial';
    font-style: normal;
    font-weight: 400;
    font-size: 13px;
    line-height: 15px;
    display: flex;
    align-items: center;
    letter-spacing: 0.1em;
    color: var(--color-light-xl);
}

.paragraph-l {
    font-family: 'Arial';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 24px;
    letter-spacing: 0.014em;
    color: var(--color-dark-s);
}

.logo p {
    margin: 10px 4px;
}

.active-link {
    padding-bottom: 4px;
    border-bottom: 3px solid var(--color-primary);
}

a.paragraph-l {
    line-height: 55px;
}

.start-text p {
    margin: 42px 0;
}

.start-text a {
    display: block;
    width: 207px;
    padding: 15px;
    border-radius: 100px;
    text-align: center;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22px;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);
    background-color: var(--color-primary);
}

.about-text .paragraph-l {
    color: var(--color-dark-xl);
}

.about-text p:last-child {
    margin-top: 25px;
}

.pets-content h3 {
    margin-bottom: 60px;
}

.arrow {
    width: 52px;
    height: 52px;
    border: 2px solid var(--color-primary);
    border-radius: 50%;
    background-color: transparent;
}

.card {
    border-radius: 9px;
    background-color: var(--color-light-s);
}

.card p {
    margin: 25px 0 30px 0;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    align-items: center;
    text-align: center;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
}

.card a {
    display: block;
    width: 187px;
    height: 52px;
    padding: 15px 0;
    margin: 0 auto;
    border: 2px solid var(--color-primary);
    border-radius: 100px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22px;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);
}

/* .card:hover {
    background-color: #C4C4C4;
    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
} */

.pets-content>a {
    display: block;
    width: 261px;
    margin: 60px auto 0 auto;
    padding: 15px;
    background-color: var(--color-primary);
    border-radius: 100px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 17px;
    line-height: 22px;
    letter-spacing: 0.06em;
    color: var(--color-dark-3xl);
}

.help-content {
    text-align: center;
}

.help-content h3 {
    margin-bottom: 60px;
}

.list-item:nth-child(3) {
    padding-right: 13px;
}

.list-item:nth-child(4) {
    padding-right: 26px;
}

.list-item:nth-child(6) {
    margin-left: 70px;
}

.list-item:nth-child(7) {
    padding-right: 64px;
}

.list-item:nth-child(8) {
    padding-right: 53px;
}

.list-item:nth-child(9) {
    margin-right: 90px;
}

.list p {
    margin-top: 25px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
}

.donation-content h3 {
    margin-bottom: 20px;
}

.donation-text p {
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 17px;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
}

.donation-text a {
    display: block;
    width: 349px;
    padding: 9px 15px;
    margin: 22px 0 20px 0;
    background: var(--color-primary);
    border-radius: 9px;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
    color: var(--color-dark-l);
}

.donation-text a img {
    width: 30px;
    height: 23px;
    margin-right: 8px;
    vertical-align: middle;
}

.donation-text span {
    font-family: 'Arial';
    font-style: italic;
    font-weight: 400;
    font-size: 12px;
    color: var(--color-dark-m);
}

.footer-content h3 {
    margin-top: 18px;
    color: var(--color-light-xl);
}

.footer-content a {
    display: flex;
    align-items: center;
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
    color: var(--color-primary);
}

.footer-content a span {
    display: block;
}

.footer-contacts a span {
    padding: 6px 0 0 20px;
}

.footer-locations a span {
    padding: 1px 0 8px 20px;
}

.footer-locations a:nth-of-type(2) span {
    padding: 6px 0 0 20px;
}

.footer-locations img {
    height: 32px;
    width: 22px;
}

.footer-contacts a img {
    height: 32px;
    width: 40px;
}

.footer-contacts a:nth-of-type(1) {
    margin-top: 14px;
    margin-bottom: 40px;
}

.footer-locations {
    margin-right: 7px;
}

.footer-locations a:nth-of-type(1) {
    margin-top: 8px;
    margin-bottom: 23px;
}

.footer-locations a:nth-of-type(1) img {
    margin-bottom: 10px;
}

